# kaldialign

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  _kaldialign.pyi  pyproject.toml  setup.py
.github/workflows/: build-wheels-aarch64.yaml  build-wheels-macos.yaml  build-wheels-win32.yaml  build-wheels.yaml  build_conda_macos.yml  build_conda_ubuntu.yml  build_conda_windows.yml  test-pip-install.yaml  test.yaml
benchmarks/: bench_compound.py
cmake/: pybind11.cmake
extensions/: align.cpp  align.pyx  calign.pxd  kaldi_align.cpp  kaldi_align.h  kaldialign.cpp
kaldialign/: __init__.py  kaldi_align.cpp  kaldialign.cpp
scripts/: build_conda.sh
scripts/conda/kaldialign/: meta.yaml
tests/: test_align.py
